--- a/style.css
+++ b/style.css
@@ -111,12 +111,16 @@ footer a {
   right: 0;
   bottom: 0;
   padding: 0.3rem 0.5rem;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
 }
 
 footer a:visited {
   color: black;
 }
-
 
 /* Media Queries */
 @media (max-width: 1920px) {
