--- a/style.css
+++ b/style.css
@@ -111,12 +111,16 @@ footer a {
   right: 0;
   bottom: 0;
   padding: 0.3rem 0.5rem;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
 }
 
 footer a:visited {
   color: black;
 }
-
 
 /* Media Queries */
 @media (max-width: 1920px) {
@@ -200,6 +204,10 @@ footer a:visited {
     top: 10.5rem;
   }
 
+  button:hover {
+    color: whitesmoke;
+  }
+
   .bubble {
     font-size: 1rem;
     
@@ -220,6 +228,11 @@ footer a:visited {
 
   span {
     /* font-size: 2.2rem; */
+  }
+
+  footer a {
+    bottom: auto;
+    top: 0;
   }
 }
 @media (max-width: 900px) {
